--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
              <p>Orpheus - always hacking</p>
             </div>
             <div> class="creature-card">
-                <img src="aarna.jpg" atl="Sister">
+                <img src="https://www.google.com/imgres?q=fishh&imgurl=https%3A%2F%2Fxenforo.storage01.edgegamers.com%2Fdata%2Favatars%2Fo%2F118%2F118874.jpg%3F1677804079&imgrefurl=https%3A%2F%2Fwww.edgegamers.com%2Fmembers%2F118874%2F&docid=JrhprTN1NDBJUM&tbnid=nIjzmUVfcMhbhM&vet=12ahUKEwjFu6eN6NKMAxW6ENAFHZrMMIQQM3oECFAQAA..i&w=389&h=360&hcb=2&ved=2ahUKEwjFu6eN6NKMAxW6ENAFHZrMMIQQM3oECFAQAA" atl="Sister">
                 <p>My bro :)</p>
             </div>
         </div>
